Fix files encoding in UTF-8 BOM instead of UTF-8 (Menu.php, STHSMain.css, images\STHSMain.css) printing invisible character "&#xFEFF;" after body (the top margin issue) and causing potential problems with cookies.

--- a/STHSMain.css
+++ b/STHSMain.css
@@ -1,4 +1,4 @@
-﻿:root {
+:root {
   --STHS-headshot-table-border: #ddd;
   --STHS-headshot-table-td-border: #ccc;
   --STHS-tablesorter-border: #ccc;
@@ -467,7 +467,7 @@ a:hover { color:var(--STHS-HyperLink); text-decoration:none;}
 .STHSPHPWebClientTeam_Table th{border-width: 1px;border-style: solid;text-align:center;background-color: var(--main-table-background-head);color:var(--main-table-background-head-text);width:33%;padding:10px;}
 .STHSPHPWebClientTeam_Table td{border-width: 1px;border-style: solid;text-align:center;width:33%;padding:8px;}
 .STHSPHPStandingPlayoffWinnerImage {width:96px;height:96px;padding-left:8px;padding-right:8px;vertical-align:middle}
-.STHSPHPMenuDiv {text-align:center;margin-top:-5px;margin-bottom:10px;}
+.STHSPHPMenuDiv {text-align:center;margin-top:10px;margin-bottom:10px;}
 .STHSPHPMenuOutOfDate{text-align:center;padding:10px;margin-bottom:10px;background-color:red;font-family:bold;font-size:25px;}
 .STHSPHPMenuOutOfDateSTHSHosting{text-align:center;background-color:red;font-family:bold;font-size:45px;width: 100%;height:100px;position: absolute;padding-top:25px;opacity: 1;z-index: 999;margin-top:-10px}
 .STHSPHPMenuTeamImage {width:24px;height:24px;padding-left:0px;padding-right:8px;vertical-align:middle}
